<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stvjuliengmail.smartmeds.activity.AddOrEditMyMedActivity">

    <LinearLayout
        android:id="@+id/header_box"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/gray_300"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ivPillImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_box">
        <TextView
            android:id="@+id/tvDosageLabel"
            style="@style/EditPillLabels"
            android:layout_weight="1"
            android:text="Dosage: "/>
        <EditText
            android:id="@+id/etDosage"
            style="@style/EditPillFields"
            android:layout_weight="3.5"
            android:hint="ex: 100 Mg"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box1">
        <TextView
            android:id="@+id/tvDirectionsLabel"
            style="@style/EditPillLabels"
            android:layout_weight="1"
            android:text="Directions: "/>

        <EditText
            android:id="@+id/etDirections"
            style="@style/EditPillFields"
            android:layout_weight="3.5"
            android:hint="ex: Take 2 per day with food" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box2">
        <TextView
            android:id="@+id/tvDoctorLabel"
            style="@style/EditPillLabels"
            android:layout_weight="1"
            android:text="Doctor: "/>
        <EditText
            android:id="@+id/etDoctor"
            style="@style/EditPillFields"
            android:layout_weight="3.5"
            android:hint="ex: Dr. Smartmedhead" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box3">
        <TextView
            android:id="@+id/tvPharmacyLabel"
            style="@style/EditPillLabels"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="end|top"
            android:text="Pharmacy: "/>
        <EditText
            android:id="@+id/etPharmacy"
            style="@style/EditPillFields"
            android:layout_weight="3.5"
            android:hint="ex: Walgreens\n123 Main St.\nYourTown, USA" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="@color/color_mainGreen"
        android:tint="@color/white"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="12dp" />

    <android.support.constraint.Guideline
        android:id="@+id/fourthOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</android.support.constraint.ConstraintLayout>
