<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.stvjuliengmail.smartmeds.activity.SearchActivity">

    <LinearLayout
        android:id="@+id/filters_widget"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:gravity="end">
        <Button
            android:id="@+id/btnShowFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:drawableEnd="@drawable/ic_search_meds"
            android:background="@android:color/transparent"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filters_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:weightSum="5">

            <AutoCompleteTextView
                android:id="@+id/autoName"
                style="@style/FiltersStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:hint="@string/pill_name"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etImprint"
                style="@style/FiltersStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:hint="Imprint"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/shapeSpinner"
                style="@style/FiltersStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:entries="@array/array_PillShapes"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/colorSpinner"
                style="@style/FiltersStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:entries="@array/array_PillColors"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center">
            <Button
                android:id="@+id/btnLoadList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_search_lg"
                android:background="@android:color/transparent"
                android:paddingTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recVwResultList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:background="@color/gray_300"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:scrollbars="vertical" />

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/gray_300"
        app:menu="@menu/bottom_navigation_menu">
    </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>

</LinearLayout>


