...
                android:layout_weight="1"
                android:gravity="right"
                android:text="Name:"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:gravity="left|center"
                android:paddingLeft="8dp"
                android:textSize="18dp" />
...
